Implement multicreate
